--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@
 }
 
 .dot {
+  background-color: red;
+  border: 2px solid black;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+
   position: absolute;
   top: 200px;
   left: 100px;
